# ImageProcessingProject

./: .gitignore  Basic.h  Blur.h  CLI_tutorial.md  CMakeLists.txt  CONTRIBUTING.md  EdgeDetection.h  Grayscale.h  Parsers.h  README.md  colorAdjustments.h  featureList.h  mainProgram.cpp  usage.txt
bitmap/: Bitmap.h  Bitmap2.cpp
grayscale/: Grayscale.cpp  Grayscale.h
linalg/: linalg.cpp  linalg.h  linalgTest.cpp
src/: Basic.h  Blur.h  Grayscale.h  Parsers.h  colorAdjustments.h  featureList.h  mainProgram.cpp  usage.h
src/bitmap/: Bitmap.cpp  Bitmap.h
src/image-loader/: Bitmap.h  Image.h
src/util/: LinkedList.h  TypeConvert.h
util/: LinkedList.h  TypeConvert.h
